--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
   padding-top: 65px !important; /* bootstrap navbar padding */
+  padding-bottom: 30px !important;
 }
 
 .login-error {
