link back to the original page

--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,19 @@
   padding: 8% 0 0;
   margin: auto;
 }
+.login-page a {
+  color: white;
+}
+.login-page a:hover {
+  text-decoration: none;
+  color:black;
+}
 .form {
   position: relative;
   z-index: 1;
   background: #FFFFFF;
   max-width: 360px;
-  margin: 0 auto 100px;
+  margin: 0 auto 40px;
   padding: 45px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
